<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="379dp"
        android:layout_height="92dp">

        <TextView
            android:id="@+id/t1"
            android:layout_width="152dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp"
            android:text="@string/cityconfig"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="73dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:onClick="backclick"
            android:text="@string/back"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/material_dynamic_neutral60"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <Button
            android:id="@+id/btn_deleteall"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:onClick="deleteallclick"
            android:text="@string/deleteall"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/material_dynamic_neutral60"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.261" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>